--- a/src/lib/css/app.css
+++ b/src/lib/css/app.css
@@ -4,5 +4,10 @@
     .btn-primary {
         @apply bg-blue-500 hover:bg-blue-700 text-white font-semibold tracking-wider uppercase text-sm py-2 px-4 border-b-2 border-blue-700 rounded transform transition duration-100 ease-in-out hover:-translate-y-1
     }
+
+    .btn-neutral {
+        @apply bg-neutral-200 hover:bg-neutral-300 font-semibold tracking-wider uppercase text-sm py-2 px-4 border-b-2 border-neutral-700 rounded transform transition duration-100 ease-in-out hover:-translate-y-1
+    }
 }
+
 @tailwind utilities;
